--- a/everforest/.nchat/color.conf
+++ b/everforest/.nchat/color.conf
@@ -1,45 +1,45 @@
-default_color_bg=0x282828
-default_color_fg=0xebdbb2
+default_color_bg=0x2d353b
+default_color_fg=0xd3c6aa
 dialog_attr=italic
 dialog_attr_selected=reverse
-dialog_color_bg=0x282828
-dialog_color_fg=0xebdbb2
+dialog_color_bg=0x2d353b
+dialog_color_fg=0xd3c6aa
 entry_attr=
-entry_color_bg=0x282828
-entry_color_fg=0x689d6a
+entry_color_bg=0x2d353b
+entry_color_fg=0x83c092
 help_attr=reverse
-help_color_bg=0x282828
-help_color_fg=0xebdbb2
+help_color_bg=0x2d353b
+help_color_fg=0xd3c6aa
 history_name_attr=bold
 history_name_attr_selected=reverse
-history_name_recv_color_bg=0x458588
-history_name_recv_color_fg=0xebddb2
-history_name_recv_group_color_bg=0x689d6a
-history_name_recv_group_color_fg=0xebdbb2
-history_name_sent_color_bg=0x98971a
-history_name_sent_color_fg=gray0x98971a
+history_name_recv_color_bg=0x7fbbb3
+history_name_recv_color_fg=0xd3c6aa
+history_name_recv_group_color_bg=0x83c092
+history_name_recv_group_color_fg=0xd3c6aa
+history_name_sent_color_bg=0xa7c080
+history_name_sent_color_fg=0xa7c080
 history_text_attachment_color_bg=
-history_text_attachment_color_fg=0x928374
+history_text_attachment_color_fg=0x9da9a0
 history_text_attr=
 history_text_attr_selected=reverse
-history_text_quoted_color_bg=0x689d6a
-history_text_quoted_color_fg=0x928374
-history_text_recv_color_bg=0x282828
-history_text_recv_color_fg=0xebdbb2
-history_text_recv_group_color_bg=0x282828
-history_text_recv_group_color_fg=0xebdbb2
-history_text_sent_color_bg=0x282828
-history_text_sent_color_fg=0xa89984
+history_text_quoted_color_bg=0x83c092
+history_text_quoted_color_fg=0x9da9a0
+history_text_recv_color_bg=0x2d353b
+history_text_recv_color_fg=0xd3c6aa
+history_text_recv_group_color_bg=0x2d353b
+history_text_recv_group_color_fg=0xd3c6aa
+history_text_sent_color_bg=0x2d353b
+history_text_sent_color_fg=0x859289
 list_attr=italic
 list_attr_selected=reverse
-list_color_bg=0x282828
-list_color_fg=0x458588
+list_color_bg=0x2d353b
+list_color_fg=0x7fbbb3
 listborder_attr=
-listborder_color_bg=0x282828
-listborder_color_fg=0xebdbb2
+listborder_color_bg=0x2d353b
+listborder_color_fg=0xd3c6aa
 status_attr=reverse
-status_color_bg=0x282828
-status_color_fg=0xebdbb2
+status_color_bg=0x2d353b
+status_color_fg=0xd3c6aa
 top_attr=reverse
-top_color_bg=0x282828
-top_color_fg=0xebdbb2
+top_color_bg=0x2d353b
+top_color_fg=0xd3c6aa
